2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: Removed all references to Tapioca
	* Banter/Conversation.cs: Removed reference to TapiocaConnection

2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: Commented out DisconnectHandlers() temporarily. 
	  It's trapping and thus preventing the closing of our telepathy
	  connection

2007-05-24  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: added presence debug messages

2007-05-23  Brady Anderson <banderso@novell.com> 

	* Banter.mdp, Banter/AccountManagement.cs, Banter/Account.cs,
	  Banter/Application.cs, Banter/Person.cs, Banter/ChatWindow.cs,
	  Banter/ProviderUserManager.cs, Banter/ProviderUser.cs,
	  Banter/Makefile.am, Banter/Conversation.cs: Major changes to talk
	  directly to telepathy-sharp rather than tapioca-sharp.  All the
	  tapioca calling code has not been removed yet.

2007-05-23  Boyd Timothy <btimothy@gmail.com> 

	* Banter/Makefile.am: Renamed CLEAN_FILES to CLEANFILES so that make
	  clean would work.

2007-05-23  Calvin Gaisford <calvinrg@gmail.com> 

	* data/Themes/ContactStyles/basic-black.tar.gz: updated to the new
	  ContactStyle format

2007-05-23  Calvin Gaisford <calvinrg@gmail.com> 

	* data/Themes/ContactStyles/basic.tar.gz: Updated the Medium Style so
	  the names are no so large
	* Banter/ContactStyle.cs: Changed the avatar size for Medium

2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 

	* data/Themes/ContactStyles/basic.tar.gz: Updated Style to contain
	  Large Theme
	* Banter/ContactStyle.cs: Added support for new Large PersonCard
	* Banter/PersonCard.cs: Added support for large PersonCard

2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: Added a PersonCard with Medium height to chat
	  window

2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Fixed the size of the Medium PersonCard

2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 
